# smu-server-sdk-c

./: .gitattributes  CMakeLists.txt  Doxyfile  LICENSE  README.md  clang-format.txt
.github/workflows/: check.yml  release.yml
docs/html/: 0__first__module_8md.html  0__module__template_8md.html  1__own__module_8md.html  CMakeLists_8txt.html  README_8md.html  abi_8h.html  abi_8h.js  abi_8h__dep__incl.map  abi_8h__dep__incl.md5  abi_8h__incl.map  abi_8h__incl.md5  abi_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_000003_000002.html  dir_000004_000000.html  dir_000004_000001.html  dir_000004_000003.html  dir_02ace01e0222cf4251c3f3de8c4550b3.html  dir_02ace01e0222cf4251c3f3de8c4550b3.js  dir_02ace01e0222cf4251c3f3de8c4550b3_dep.map  dir_02ace01e0222cf4251c3f3de8c4550b3_dep.md5  dir_2b62a22b82aac776549c15514a2aafcf.html  dir_2b62a22b82aac776549c15514a2aafcf.js  dir_2b62a22b82aac776549c15514a2aafcf_dep.map  dir_2b62a22b82aac776549c15514a2aafcf_dep.md5  dir_508900ba90cabca4a69144c14e779787.html  dir_508900ba90cabca4a69144c14e779787.js  dir_508900ba90cabca4a69144c14e779787_dep.map  dir_508900ba90cabca4a69144c14e779787_dep.md5  dir_574cea2f34edcce2718185d8ce29177a.html  dir_574cea2f34edcce2718185d8ce29177a.js  dir_574cea2f34edcce2718185d8ce29177a_dep.map  dir_574cea2f34edcce2718185d8ce29177a_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_da365f69fd92fba590466b428516f2c8.html  (+110 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+20 more)
guides/: 0_first_module.md  0_module_template.md  1_own_module.md
guides/examples/MyWonderfulModule/: CMakeLists.txt
guides/examples/MyWonderfulModule/src/: main.c
include/: sdk.h  version.h  version.h.in
include/general/: log_type.h  sdk_status.h
include/internals/: memutils.h  sdk_internals.h
include/modules/: sdk.h
include/modules/internals/: abi.h  imodule.h  macro.h  mdtp.h  memutils.h  sdk_internals.h  utils.h
src/: sdk.c
src/modules/: imodule.c  mdtp.c  sdk.c  utils.c
tests/: test.c  test_mdtp.c  test_mdtp.h  test_sdk_stubs.c
tests/mdtp/: main.c
tests/module/: main.c
tests/sdk_utils/: main.c
